--- a/index.html
+++ b/index.html
@@ -16,24 +16,33 @@
   <body>
     <div class="card">
       <div class="search">
-        <input type="text" placeholder="Enter City Name" />
-        <button><i class="fa-solid fa-search"></i></button>
+        <div>
+          <i class="fas fa-map-marker-alt"></i>
+          <input type="text" placeholder="Enter City Name" />
+          <button><i class="fa-solid fa-search"></i></button>
+        </div>
       </div>
       <h1 class="city">New York</h1>
       <img src="a.png" class="c" />
-      <h2 class="temp">22°C</h2>
+      <div>
+        <h2 class="temp">22°C</h2>
+      </div>
       <div class="det">
         <div class="humidity">
           <div>
             <img src="d.png" alt="" />
-            <p class="val humid">50%</p>
+            <div>
+              <p class="val humid">50%</p>
+            </div>
           </div>
           <p>Humidity</p>
         </div>
         <div class="windspeed">
           <div>
             <img src="c.png" alt="" />
-            <p class="val wind">15 km/h</p>
+            <div>
+              <p class="val wind">15 km/h</p>
+            </div>
           </div>
           <p>Wind Speed</p>
         </div>
