--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       <h1 class="city">New York</h1>
       <img src="a.png" class="c" />
       <div>
-        <h2 class="temp">22°C</h2>
+        <h2 class="temp">22<span style="font-size: 0.65em"><sup>°C</sup></span></h2>
       </div>
       <div class="det">
         <div class="humidity">
           <div>
             <img src="d.png" alt="" />
             <div>
-              <p class="val humid">50%</p>
+              <p class="val humid">50<span style="font-size: 0.65em"><sup>%</sup></span></p>
             </div>
           </div>
           <p>Humidity</p>
@@ -41,7 +41,7 @@
           <div>
             <img src="c.png" alt="" />
             <div>
-              <p class="val wind">15 km/h</p>
+              <p class="val wind">15<span style="font-size: 0.65em"><sup>km/h</sup></span></p>
             </div>
           </div>
           <p>Wind Speed</p>
